--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -1,2 +1,192 @@
-@import '../app.component.scss'
+@import '../../styles.scss';
 
+@media (max-width: 699px) {
+
+    #home_view {
+        height: 100vh;
+        width: 100%;
+        position: relative;
+        background-color: $secondary-color;
+        #presentation_title {
+            position: absolute;
+            z-index: 3;
+            padding: 45px;
+            margin-top: 25px;
+            width: 100%;
+            text-align: center;
+            #epigraph {
+                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent);
+                -webkit-background-clip: text;
+                background-clip: text;
+                animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+                @keyframes reveal {
+                    80% {
+                        letter-spacing: 3px;
+                    }
+                    100% {
+                        background-size: 300% 300%;
+                    }
+                }
+                @keyframes glow {
+                    40% {
+                        text-shadow: 0 0 8px $surface-color;
+                    }
+                }
+                h1 {
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 600;
+                    line-height: 1em;
+                    font-size: 35px;
+                }
+                h3 {
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 200;
+                    font-size: 18px; 
+                } 
+            }
+        }
+        #clippath_polygon {
+            clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+            background-color: $primary-color;
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+        }
+        #clippath_circle {
+            clip-path: circle(19.8% at 50% 50%);
+            background-color: $primary-variant-color;
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            animation-name: zoom-out;
+            animation-duration: 3s;
+            @keyframes zoom-out {
+                0% {
+                    width: 180%;
+                    clip-path: circle(9.3% at 50% 50%); 
+                }
+                100% {
+                    width: 100%;
+                }
+            }
+        }
+        #home_button {
+            position: absolute;
+            z-index: 4;
+            margin-top: 70vh; 
+        }                     
+    }
+    #about_view {
+        height: 100vh;
+    }
+}
+
+@media (min-width: 700px) {
+
+    #home_view {
+        height: 100vh;
+        width: 100%;
+        position: relative;
+        background-color: $secondary-color;
+        #presentation_title {
+            position: absolute;
+            z-index: 3;
+            padding: 25px;
+            margin-top: 35px;
+            width: 50%;
+            text-align: center;
+            #epigraph {
+                background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, $surface-color, transparent, transparent);
+                -webkit-background-clip: text;
+                background-clip: text;
+                color: transparent;
+                animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+                @keyframes reveal {
+                    80% {
+                        letter-spacing: 3px;
+                    }
+                    100% {
+                        background-size: 300% 300%;
+                    }
+                }
+                @keyframes glow {
+                    40% {
+                        text-shadow: 0 0 8px $surface-color;
+                    }
+                }
+                h1 {
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 600;
+                    line-height: 1em;
+                    font-size: 65px;
+                    margin-bottom: 25px;
+                }
+                h3 {
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 200;
+                    font-size: 18px; 
+                } 
+            }
+        }
+        #clippath_polygon {
+            clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+            background-color: $primary-color;
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+        }
+        #clippath_triangle {
+            clip-path: polygon(0 89%, 100% 95%, 100% 100%, 0% 100%);
+            background-color: $primary-variant-color;
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+        }
+        #clippath_circle {
+            clip-path: circle(20.7% at 71% 50%);
+            background-color: $primary-variant-color;
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            animation-name: zoom-out;
+            animation-duration: 4s;
+            @keyframes zoom-out {
+                0% {
+                    width: 140%; 
+                }
+                100% {
+                    width: 100%;
+                }
+            }
+        }
+        .container-fluid {
+            margin-left: 0;
+            margin-right: 0;
+            width: 50%;
+            .w-100 {
+                width: 50% !important;           
+                #home_button {
+                    position: absolute;
+                    z-index: 4;
+                    margin-top: 65vh;
+                }
+            }
+        }
+        #home_button {
+            position: absolute;
+            z-index: 4;
+            margin-top: 70vh; 
+        }                     
+    }
+    #about_view {
+        height: 100vh;
+    }    
+}
