--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,9 +5,9 @@
         </div>
     </div>
     <div id="projects_content" class="container-fluid">
-        <div class="row">
-            <div class="col-3">
-                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <div class="row" style="height: 85vh;">
+            <div class="col-3" style="height: 85vh;">
+                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="height: 95%;">
                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
                         aria-controls="v-pills-home" aria-selected="true">Faculty of Engineering</a>
                     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
@@ -18,8 +18,8 @@
                         aria-controls="v-pills-settings" aria-selected="false">Technology testing</a>
                 </div>
             </div>
-            <div class="col-9">
-                <div class="tab-content" id="v-pills-tabContent">
+            <div class="col-9" style="height: 85vh;">
+                <div class="tab-content" id="v-pills-tabContent" style="height: 95%;">
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                         aria-labelledby="v-pills-home-tab">
                         <pagination-controls *ngIf="cards.length>4" id="first_pagination" (pageChange)="p = $event"></pagination-controls>
